[package]
name = "net-sim"
version = "0.1.0"
edition = "2021"
authors = ["Ian Laidlaw"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.4", features = ["rwh_05"] }
env_logger = "0.10.1"
log = "0.4.20"
wgpu = "0.18.0"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = "0.24.7"
anyhow = "1.0.75"